CalendarSelect Spanish tranlsation fixes (bug 460).

--- a/src/server-java/app/META-INF/nextapp/echo/extras/Calendar_es.properties
+++ b/src/server-java/app/META-INF/nextapp/echo/extras/Calendar_es.properties
@@ -1,10 +1,10 @@
-# Properties File for DateField Components: Italian
+# Properties File for DateField Components: Spanish
 
 Month0                                  Enero 
 Month1                                  Febrero
-Month2                                  Marcha
+Month2                                  Marzo
 Month3                                  Abril
-Month4                                  Puede
+Month4                                  Mayo
 Month5                                  Junio
 Month6                                  Julio
 Month7                                  Agosto
