Translation fix (CalendarSelect, Italian, "May")

--- a/src/server-java/app/META-INF/nextapp/echo/extras/Calendar_it.properties
+++ b/src/server-java/app/META-INF/nextapp/echo/extras/Calendar_it.properties
@@ -4,7 +4,7 @@ Month0                                  Gennaio
 Month1                                  Febbraio
 Month2                                  Marzo
 Month3                                  Aprile
-Month4                                  Pu\u00f2
+Month4                                  Maggio
 Month5                                  Giugno
 Month6                                  Luglio
 Month7                                  Agosto
